--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,18 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <main></main>
+    <form class="form">
+      <label>
+        <input type="text" name="search-text" placeholder="Search images..." />
+      </label>
+      <button type="submit">Search</button>
+    </form>
+
+    <div class="loader-container">
+      <span class="loader"></span>
+    </div>
+
+    <ul class="gallery"></ul>
 
     <script type="module" src="./main.js"></script>
   </body>
